[package]
name = "word_of_wisdom"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"