[package]
name = "word_of_wisdom"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.9"


[dev-dependencies]
mockstream = "0.0.3"
tempfile = "3.2"
